# charge-system

./: .env.example  .gitignore  CLAUDE.md  README.md  UML流程图.md  requirements.txt  作业工作量统计.docx  作业工作量统计.md  背景调研.md
backend/: main.py  pyproject.toml
backend/api/admin/bills/: router.py
backend/api/admin/config/: router.py
backend/api/admin/logs/: __init__.py  router.py
backend/api/admin/queues/: router.py
backend/api/admin/reports/: router.py
backend/api/auth/: router.py  schema.py
backend/api/bills/: router.py
backend/api/protocols/: router.py
backend/api/sessions/: router.py
backend/api/stations/: router.py
backend/api/users/: router.py
backend/core/: config.py  database.py  deps.py  exception_handlers.py  exceptions.py  logger.py  response.py  security.py  test_utils.py
backend/model/: bill.py  config.py  log_record.py  protocol.py  schedule_log.py  session.py  station.py  user.py  user_protocol.py
backend/scheduler/: dispatch_loop.py
backend/service/account/: service.py
backend/service/admin/: service.py
backend/service/billing/: engine.py  service.py
backend/service/dispatch/: service.py  strategy.py
backend/service/queue/: admin_service.py  service.py
backend/service/session/: service.py
backend/service/station/: service.py
backend/tests/: conftest.py  test_admin_config.py  test_admin_misc.py  test_admin_sessions.py  test_example_mock.py  test_stage0_infrastructure.py  test_stage1_auth.py  test_stage2_stations.py  test_stage3_sessions.py  test_stage4_dispatch.py  test_stage5_session_charging.py  test_stage6_billing.py
(+127 files in other folders)
